--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
           pip install requests beautifulsoup4 feedgen pytz
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Fetch articles
-        run: python parser.py runserver
+        run: python rss/parser.py runserver
 
       - name: Create RSS files
-        run: python output.py
+        run: python rss/output.py
         
       - name: Commit
         run: |
